# chat_fast-api

./: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
backend/application/api/: main.py
backend/domain/entites/: base.py  messages.py
backend/domain/exceptions/: base.py  messages.py
backend/domain/values/: base.py  messages.py
backend/tests/domain/values/: test_messages.py
docker_compose/: app.yaml
